DSS-4036,DSS-4022,DSS-4012, DSS-4011, DSS-3941, DSS-3932: Bug fixing loading seq 07 09 2021 (#1936)
* DSS-4022: Loading Sequence>>Difference in ending time in the tool tip
DSS-4012: Loading Sequence>>Tooltip of the flow rate chart is missing
DSS-4011: Loading Sequence>>When unit is chosen as KL, ui issue in the cargo tank column
DSS-3941: Decimals to be corrected in Loading Sequence
DSS-3932: Port card is splitting when there is downloads at the bottom
DSS-4036: Angular - Tooltip for stability grid to view overlapped data

* DSS-4036: Angular - Tooltip for stability grid to view overlapped data

--- a/web/cpdss-portal/apps/cpdss/src/styles.scss
+++ b/web/cpdss-portal/apps/cpdss/src/styles.scss
@@ -1824,7 +1824,7 @@ th .p-button.p-button-icon-only.p-button-rounded{
 }
 
 .selected {
-  & > .arrival {
+  &.arrival {
     padding-right: 0px;
 
     & .carousel-card {
@@ -1832,7 +1832,7 @@ th .p-button.p-button-icon-only.p-button-rounded{
     }
   }
 
-  & > .departure {
+  &.departure {
     & .carousel-card {
       border-radius: 0px 5px 5px 0px;
     }
@@ -3015,7 +3015,7 @@ textarea{
   }
 }
 
-.highcharts-axis-labels.highcharts-xaxis-labels.highcharts-grid-axis, .highcharts-axis.highcharts-yaxis.highcharts-grid-axis {
+.highcharts-axis-labels.highcharts-xaxis-labels.highcharts-grid-axis, .highcharts-axis.highcharts-yaxis.highcharts-grid-axis, .table-cell-text {
   z-index: -1 !important;
 }
 
@@ -3027,6 +3027,16 @@ textarea{
   .highcharts-axis-title{
     text-transform: uppercase;
   }
+}
+
+.sequence-chart path.highcharts-axis-line {
+    stroke-width: 0;
+}
+
+.stabilityparams-chart {
+ .highcharts-br + tspan {
+   display: none;
+ }
 }
 
 .arrival-condition-pop-up, .departure-condition-pop-up{
@@ -3052,7 +3062,7 @@ textarea{
   th, td{
     &:last-child, &:nth-last-child(2){
       text-align: right!important;
-    } 
+    }
   }
 }
 
@@ -3060,7 +3070,7 @@ textarea{
   th, td{
     &:last-child{
       text-align: right!important;
-    } 
+    }
   }
 }
 
