--- a/web/cpdss-portal/apps/cpdss/src/styles/themes/light/theme-light.scss
+++ b/web/cpdss-portal/apps/cpdss/src/styles/themes/light/theme-light.scss
@@ -1538,7 +1538,7 @@ header{
   }
 }
 
-.highcharts-label-box.highcharts-tooltip-box {
+.highcharts-label-box {
   fill:rgba($tooltip-bg, 1) !important;
   stroke: $card-distance !important;
 }
